services/analytics-v2/Protect analytics-v2 from External Traffic.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "Protect analytics-v2 from External Traffic"
spec:
  endpointSelector:
    matchLabels:
      role: {}		
  egress:
  - toCIDR:
    - 10.52.11.196/32
    toPorts:
    - ports:
      - port: "8092"
        protocol: TCP
      - port: "32066"
        protocol: TCP
